--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^8.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
-    "prettier": "^2.8.3"
+    "prettier": "^2.8.3",
+    "sass": "^1.58.2"
   }
 }
