--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
   },
   "homepage": "https://github.com/krass7/hexlet-js#readme",
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "pug": "^3.0.2",
+    "pug-cli": "^1.0.0-alpha6"
   },
   "devDependencies": {
     "eslint": "^8.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
     "prettier": "^2.8.3",
-    "sass": "^1.58.2"
+    "sass": "^1.58.3"
   }
 }
